--- a/main.yml
+++ b/main.yml
@@ -5,7 +5,7 @@
   roles:
     - bussmeyer.dotfiles
     - geerlingguy.homebrew
-    - { role: viasite-ansible.zsh }
+    - viasite-ansible.zsh
 
   vars:
     homebrew_taps:
