vlc player is always a good idea.

--- a/main.yml
+++ b/main.yml
@@ -20,6 +20,7 @@
       - firefox
       - microsoft-lync
       - microsoft-teams
+      - vlc
       - yed
       # developer apps
       - docker
