--- a/main.yml
+++ b/main.yml
@@ -102,9 +102,41 @@
         key: 'WebKitDeveloperExtras'
         type: boolean
         value: true
+    zsh_autosuggestions_bind_key: "^U"
+    zsh_antigen_bundles_extras:
+      - composer
+      - git-flow
+      - nvm
+      - { name: osx, when: "{{ ansible_os_family == 'Darwin' }}" }
+
   tasks:
     - name: create ~/Projects directory
       file: path=~/Projects state=directory
     - name: set mac defaults
       osx_defaults: domain="{{ item.domain }}" key="{{ item.key }}" type="{{ item.type }}" value="{{ item.value }}" state=present
       with_items: "{{ osx_defaults }}"
+    - name: create /usr/local/powerline directory
+      file: path=/usr/local/powerline state=directory
+      tags:
+        - powerline
+    - name: git clone Powerline fonts repository
+      git: repo='https://github.com/powerline/fonts.git' dest=/usr/local/powerline/fonts
+      tags:
+        - powerline
+    - name: install Powerline fonts
+      command: ./install.sh
+      args:
+        chdir: /usr/local/powerline/fonts/
+      tags:
+        - powerline
+    - name: cleanup Powerline fonts installation
+      file: path=/usr/local/powerline/fonts state=absent
+      tags:
+        - powerline
+    - name: .zshrc.local
+      template:
+        src: templates/zshrc.local
+        dest: ~/.zshrc.local
+      tags:
+        - dotfiles
+
