--- a/main.yml
+++ b/main.yml
@@ -40,6 +40,7 @@
       - postman
       - sequel-pro
       - sourcetree
+      - sublime-text
       - vagrant
       - virtualbox
       - wireshark
