--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,10 @@ before_install:
 
 install:
   # Add a hosts file.
+  - sudo mkdir -p /etc/ansible
   - sudo touch /etc/ansible/hosts
   - "echo -e '[local]\nlocalhost ansible_connection=local' | sudo tee -a /etc/ansible/hosts > /dev/null"
+
+script:
+  # Test the Tell.
+  - "travis_wait 30 tell"
