--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 ---
-sudo: required
+os:
+  - osx
 language: objective-c
 # 10.13 (see https://docs.travis-ci.com/user/osx-ci-environment/#OS-X-Version)
 osx_image: xcode9.2
