--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 ---
-osx_image: xcode9.2
-language: generic
+sudo: required
+language: objective-c
+# 10.13 (see https://docs.travis-ci.com/user/osx-ci-environment/#OS-X-Version)
+osx_image: xcode9.3
 
 before_install:
   # Uninstall existing Homebrew installation.
