--- a/.travis.yml
+++ b/.travis.yml
@@ -14,15 +14,23 @@ before_install:
   - sudo rm -rf /usr/local/bin/brew
 
 install:
+  # Install pip.
+  - sudo easy_install pip
+
+  # Install Ansible.
+  - sudo pip install ansible
+
+  # Add ansible.cfg to pick up roles path.
+  - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
+
   # Add a hosts file.
   - sudo mkdir -p /etc/ansible
   - sudo touch /etc/ansible/hosts
   - "echo -e '[local]\nlocalhost ansible_connection=local' | sudo tee -a /etc/ansible/hosts > /dev/null"
-  - sudo pip install nose tornado
-  - curl https://bootstrap.pypa.io/get-pip.py | sudo python
-  - pip install --upgrade setuptools --user python
-  - sudo pip install -q ansible
 
 script:
-  - "ansible-galaxy install -f -r requirements.yml"
+  # Install dependencies.
+  - "ansible-galaxy install -r requirements.yml"
+
+  # Check the role/playbook's syntax.
   - "ansible-playbook main.yml --syntax-check"
