--- a/main.yml
+++ b/main.yml
@@ -83,6 +83,8 @@
     gem_packages:
       - name: docker-sync
         state: latest
+    npm_packages:
+      - name: grunt
     osx_defaults:
       - domain: 'com.apple.screencapture'
         key: 'type'
@@ -172,6 +174,16 @@
       with_items: "{{ gem_packages }}"
       tags:
         - gems
+    - name: Install global NPM packages.
+      npm:
+        name: "{{ item.name | default(item) }}"
+        state: "{{ item.state | default('present') }}"
+        version: "{{ item.version | default(omit) }}"
+        global: yes
+        executable: "{{ item.executable | default(omit) }}"
+      with_items: "{{ npm_packages }}"
+      tags:
+        - npm
     - name: Include default variables
       include_vars: defaults/main.yml
       tags:
