Add tableau, tableau-reader

--- a/main.yml
+++ b/main.yml
@@ -51,6 +51,8 @@
       - sketch
       - sourcetree
       - sublime-text
+      - tableau
+      - tableau-reader
       - vagrant
       - vmware-fusion
       - virtualbox
