--- a/main.yml
+++ b/main.yml
@@ -26,6 +26,7 @@
       - firefox
       - licecap
       - microsoft-teams
+      - owncloud
       - spectacle
       - the-unarchiver
       - vlc
