--- a/main.yml
+++ b/main.yml
@@ -26,6 +26,7 @@
       - disk-inventory-x
       - drawio
       - firefox
+      - gimp
       - licecap
       - microsoft-teams
       - owncloud
