--- a/main.yml
+++ b/main.yml
@@ -31,6 +31,7 @@
       - licecap
       - microsoft-teams
       - musicbrainz-picard
+      - openemu
       - owncloud
       - spectacle
       - the-unarchiver
