--- a/main.yml
+++ b/main.yml
@@ -33,6 +33,7 @@
       - musicbrainz-picard
       - openemu
       - owncloud
+      - plex-media-player
       - spectacle
       - the-unarchiver
       - vlc
