--- a/main.yml
+++ b/main.yml
@@ -34,6 +34,7 @@
       - openemu
       - owncloud
       - plex-media-player
+      - sixtyforce
       - spectacle
       - the-unarchiver
       - vlc
