--- a/main.yml
+++ b/main.yml
@@ -43,6 +43,7 @@
       - vox-preferences-pane
       - yed
       - youtube-to-mp3
+      - zoom
       # developer apps
       - atom
       - charles
