--- a/main.yml
+++ b/main.yml
@@ -29,6 +29,7 @@
       - google-backup-and-sync
       - keeweb
       - licecap
+      - michaelvillar-timer
       - microsoft-teams
       - musicbrainz-picard
       - openemu
