--- a/main.yml
+++ b/main.yml
@@ -26,6 +26,7 @@
       - drawio
       - gimp
       - google-backup-and-sync
+      - google-chrome
       - keeweb
       - licecap
       - michaelvillar-timer
