--- a/main.yml
+++ b/main.yml
@@ -47,7 +47,6 @@
       - zoom
       # developer apps
       - atom
-      - charles
       - cyberduck
       - db-browser-for-sqlite
       - docker
@@ -147,8 +146,45 @@
         key: 'WebKitDeveloperExtras'
         type: boolean
         value: true
+      - domain: 'NSGlobalDomain'
+        key: 'AppleEnableMenuBarTransparency'
+        type: boolean
+        value: true
+      - domain: 'com.apple.menuextra.battery'
+        key: 'ShowPercent'
+        type: string
+        value: "NO"
+      - domain: 'com.apple.menuextra.battery'
+        key: 'ShowTime'
+        type: string
+        value: "YES"
+      - domain: 'com.apple.dock'
+        key: 'launchanim'
+        type: bool
+        value: true
     dockitems_to_remove:
-      - Safari
+      - Microsoft Outlook
+      - Microsoft Word
+      - Microsoft Excel
+      - Microsoft PowerPoint
+      - Vorschau
+      - Lion Store
+      - Enterprise Connect
+      - Karten
+      - Fotos
+    dockitems_to_persist:
+      - name: Google Chrome
+        path: "/Applications/Google Chrome.app"
+        pos: 1
+      - name: Firefox
+        path: "/Applications/Firefox.app"
+        pos: 2
+      - name: Safari
+        path: "/Applications/Safari.app"
+        pos: 3
+      - name: iTerm
+        path: "/Applications/iTerm.app"
+        pos: 4
     zsh_autosuggestions_bind_key: "^U"
     zsh_antigen_bundles_extras:
       - composer
@@ -164,18 +200,17 @@
         - osx
     - name: Remove all crap from Dock
       shell: dockutil --remove '{{ item }}'
-      ignore_errors: true
-      with_items: dockitems_to_remove
+      with_items: "{{ dockitems_to_remove }}"
       tags:
         - osx
     - name: Check if items in dock exist
       shell: dockutil --find '{{ item.name }}' || dockutil --add '{{ item.path }}'
-      with_items: dockitems_to_persist
+      with_items: "{{ dockitems_to_persist }}"
       tags:
         - osx
     - name: Fix order
       shell: dockutil --move '{{ item.name }}' --position {{ item.pos }}
-      with_items: dockitems_to_persist
+      with_items: "{{ dockitems_to_persist }}"
       tags:
         - osx
     - name: create /tmp/powerline directory
