--- a/main.yml
+++ b/main.yml
@@ -243,10 +243,8 @@
       git: repo='https://github.com/powerline/fonts.git' dest=/tmp/powerline
       tags:
         - shell
-    - name: install Powerline fonts
-      command: ./install.sh
-      args:
-        chdir: /tmp/powerline
+    - name: install script of Powerline fonts
+      command: /tmp/powerline/install.sh
       tags:
         - shell
     - name: cleanup Powerline fonts installation
