Set empty var for gems.

--- a/main.yml
+++ b/main.yml
@@ -8,6 +8,7 @@
     - viasite-ansible.zsh
 
   vars:
+    gem_packages: []
     composer_packages:
       - name: hirak/prestissimo
       - name: drush/drush
