--- a/main.yml
+++ b/main.yml
@@ -116,6 +116,10 @@
         key: 'type'
         type: string
         value: png
+      - domain: 'com.apple.screencapture'
+        key: 'location'
+        type: string
+        value: "$HOME/Desktop"
       - domain: 'com.apple.desktopservices' # http://www.defaults-write.com/disable-the-creation-of-ds_store-files/
         key: 'DSDontWriteNetworkStores'
         type: boolean
