--- a/main.yml
+++ b/main.yml
@@ -112,6 +112,10 @@
     npm_packages:
       - name: grunt
     osx_defaults:
+      - domain: 'com.apple.finder'
+        key: 'FXPreferredViewStyle'
+        type: string
+        value: "Nlsv"
       - domain: 'com.googlecode.iterm2'
         key: 'PromptOnQuit'
         type: bool
