--- a/main.yml
+++ b/main.yml
@@ -116,6 +116,10 @@
         key: 'FXPreferredViewStyle'
         type: string
         value: "Nlsv"
+      - domain: 'com.apple.finder'
+        key: 'QLEnableTextSelection'
+        type: bool
+        value: true
       - domain: 'com.googlecode.iterm2'
         key: 'PromptOnQuit'
         type: bool
