--- a/main.yml
+++ b/main.yml
@@ -112,14 +112,25 @@
     npm_packages:
       - name: grunt
     osx_defaults:
-      - domain: 'com.apple.finder'
-        key: 'FXPreferredViewStyle'
+      ###############################################################################
+      # MenuBar                                                                     #
+      ###############################################################################
+      - domain: 'com.apple.menuextra.clock'
+        key: 'DateFormat'
         type: string
-        value: "Nlsv"
-      - domain: 'com.apple.finder'
-        key: 'QLEnableTextSelection'
-        type: bool
+        value: "EEE MMM d  h:mm a"
+      - domain: 'NSGlobalDomain'
+        key: 'AppleEnableMenuBarTransparency'
+        type: boolean
         value: true
+      - domain: 'com.apple.menuextra.battery'
+        key: 'ShowPercent'
+        type: string
+        value: "NO"
+      - domain: 'com.apple.menuextra.battery'
+        key: 'ShowTime'
+        type: string
+        value: "YES"
       - domain: 'com.googlecode.iterm2'
         key: 'PromptOnQuit'
         type: bool
@@ -161,21 +172,21 @@
         type: boolean
         value: true
       - domain: 'NSGlobalDomain'
-        key: 'AppleEnableMenuBarTransparency'
-        type: boolean
-        value: true
-      - domain: 'NSGlobalDomain'
         key: 'NSNavPanelExpandedStateForSaveMode'
         type: boolean
         value: true
-      - domain: 'com.apple.menuextra.battery'
-        key: 'ShowPercent'
+      - domain: 'com.apple.LaunchServices'
+        key: 'LSQuarantine'
+        type: bool
+        value: false
+      - domain: 'com.apple.finder'
+        key: 'FXPreferredViewStyle'
         type: string
-        value: "NO"
-      - domain: 'com.apple.menuextra.battery'
-        key: 'ShowTime'
-        type: string
-        value: "YES"
+        value: "Nlsv"
+      - domain: 'com.apple.finder'
+        key: 'QLEnableTextSelection'
+        type: bool
+        value: true
       - domain: 'com.apple.dock'
         key: 'launchanim'
         type: bool
@@ -184,18 +195,6 @@
         key: 'tilesize'
         type: float
         value: 32
-      - domain: 'com.apple.menuextra.clock'
-        key: 'DateFormat'
-        type: string
-        value: "EEE MMM d  h:mm a"
-      - domain: 'com.apple.menuextra.battery'
-        key: 'ShowPercent'
-        type: string
-        value: "YES"
-      - domain: 'com.apple.LaunchServices'
-        key: 'LSQuarantine'
-        type: bool
-        value: false
     dockitems_to_remove:
       - Microsoft Outlook
       - Microsoft Word
