--- a/main.yml
+++ b/main.yml
@@ -130,7 +130,7 @@
       - domain: 'com.apple.menuextra.battery'
         key: 'ShowTime'
         type: string
-        value: "YES"
+        value: "NO"
       - domain: 'com.googlecode.iterm2'
         key: 'PromptOnQuit'
         type: bool
