--- a/main.yml
+++ b/main.yml
@@ -141,7 +141,9 @@
           - "/System/Library/CoreServices/Menu Extras/Clock.menu"
           - "/System/Library/CoreServices/Menu Extras/User.menu"
           - "/System/Library/CoreServices/Menu Extras/Volume.menu"
-
+      ###############################################################################
+      # to be clustered                                                             #
+      ###############################################################################
       - domain: 'com.googlecode.iterm2'
         key: 'PromptOnQuit'
         type: bool
