--- a/main.yml
+++ b/main.yml
@@ -172,14 +172,6 @@
         key: 'WebKitDeveloperExtras'
         type: boolean
         value: true
-      - domain: 'com.apple.dock'
-        key: 'launchanim'
-        type: bool
-        value: true
-      - domain: 'com.apple.dock'
-        key: 'tilesize'
-        type: float
-        value: 32
 
       ###############################################################################
       # General UI/UX                                                               #
@@ -236,6 +228,81 @@
         key: 'QuitMenuItem'
         type: bool
         value: true
+      ###############################################################################
+      # Dock, Dashboard, and hot corners                                            #
+      ###############################################################################
+      # Hot corners
+      # Possible values:
+      #  0: no-op
+      #  2: Mission Control
+      #  3: Show application windows
+      #  4: Desktop
+      #  5: Start screen saver
+      #  6: Disable screen saver
+      #  7: Dashboard
+      # 10: Put display to sleep
+      # 11: Launchpad
+      # 12: Notification Center
+      # Top left screen corner → Desktop
+      - domain: 'com.apple.dock'
+        key: 'wvous-tl-corner'
+        type: int
+        value: 4
+      - domain: 'com.apple.dock'
+        key: 'wvous-tl-modifier'
+        type: int
+        value: 0
+      # Top right screen corner → Mission Control
+      - domain: 'com.apple.dock'
+        key: 'wvous-tr-corner'
+        type: int
+        value: 2
+      - domain: 'com.apple.dock'
+        key: 'wvous-tr-modifier'
+        type: int
+        value: 0
+      # Bottom left screen corner → Desktop
+      - domain: 'com.apple.dock'
+        key: 'wvous-bl-corner'
+        type: int
+        value: 4
+      - domain: 'com.apple.dock'
+        key: 'wvous-bl-modifier'
+        type: int
+        value: 0
+      # Bottom right screen corner → Mission Control
+      - domain: 'com.apple.dock'
+        key: 'wvous-br-corner'
+        type: int
+        value: 2
+      - domain: 'com.apple.dock'
+        key: 'wvous-br-modifier'
+        type: int
+        value: 0
+      # Disable dashboard widgets (saves RAM)
+      - domain: 'com.apple.dashboard'
+        key: 'mcx-disabled'
+        type: bool
+        value: true
+      # Disable Mission Control
+      - domain: 'com.apple.Dock'
+        key: 'mcx-expose-disabled'
+        type: bool
+        value: false
+      # Enable the 2D Dock
+      - domain: 'com.apple.dock'
+        key: 'no-glass'
+        type: bool
+        value: true
+      - domain: 'com.apple.dock'
+        key: 'launchanim'
+        type: bool
+        value: true
+      - domain: 'com.apple.dock'
+        key: 'tilesize'
+        type: float
+        value: 32
+
     dockitems_to_remove:
       - Microsoft Outlook
       - Microsoft Word
