add Atom to the dock.

--- a/main.yml
+++ b/main.yml
@@ -326,12 +326,15 @@
       - name: iTerm
         path: "/Applications/iTerm.app"
         pos: 4
+      - name: Atom
+        path: "/Applications/Atom.app"
+        pos: 5
       - name: Notes
         path: "/Applications/Notes.app"
-        pos: 5
+        pos: 6
       - name: Messages
         path: "/Applications/Messages.app"
-        pos: 6
+        pos: 7
     zsh_autosuggestions_bind_key: "^U"
     zsh_antigen_bundles_extras:
       - composer
