Choose the right zoom app.

--- a/main.yml
+++ b/main.yml
@@ -45,7 +45,7 @@
       - vox-preferences-pane
       - yed
       - youtube-to-mp3
-      - zoom
+      - zoomus
       # developer apps
       - atom
       - cyberduck
