add table-tool for csv.

--- a/main.yml
+++ b/main.yml
@@ -69,6 +69,7 @@
       - sublime-text
       - tableau
       - tableau-reader
+      - table-tool
       - vagrant
       - vmware-fusion
       - virtualbox
