--- a/main.yml
+++ b/main.yml
@@ -115,6 +115,8 @@
       - zsh-completions
     npm_packages:
       - name: grunt
+    pip_packages:
+      - name: virtualenv
     osx_defaults:
       ###############################################################################
       # MenuBar                                                                     #
@@ -569,6 +571,12 @@
       with_items: "{{ npm_packages }}"
       tags:
         - npm
+    - name: Install python packages.
+      pip:
+        name: "{{ item.name | default(item) }}"
+      with_items: "{{ pip_packages }}"
+      tags:
+        - pip  
     - name: create ~/Projects directory
       file: path=~/Projects state=directory
       tags:
